--SOCKETS FOR LEAVING ARE WORKING PROPERLY BUT THERE IS STILL A BUG WITH THE VISIBILITY OF THE ROOMS

--- a/src/entities/Tab_Components/YourGameTab/styles.module.scss
+++ b/src/entities/Tab_Components/YourGameTab/styles.module.scss
@@ -26,6 +26,11 @@
 		@apply outline-primary-red;
 		@apply mt-4;
 	}
+
+	&__icon {
+		@apply text-primary-red;
+		@apply text-3xl;
+	}
 }
 
 .additional_players {
